# tess-backdrop

./: .flake8  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tessbackdrop_jitter_components_sector1_camera1_ccd3.fits
backdrop/: index.html
corrector/: index.html
correctors/: index.html
demo/: index.html
docs/: backdrop.md  corrector.md  correctors.md  demo.ipynb  fit-model-example.ipynb  full.md  index.md  lightcurve-example.ipynb  simple.md
fit-model-example/: index.html
lightcurve-example/: index.html
pleiades/: chedges@pfe21.nas.nasa.gov  test.py
search/: search_index.json
site/: 404.html  sitemap.xml
site/backdrop/: index.html
site/search/: search_index.json
src/tess_backdrop/: __init__.py  backdrop.py  full.py  simple.py  tesscutcorrector.py  utils.py  version.py
src/tess_backdrop/data/sector001/camera01/ccd03/: tessbackdrop_jitter_sector1_camera1_ccd3.fits
src/tess_backdrop/data/sector002/camera01/ccd01/: tessbackdrop_sector2_camera1_ccd2.fits  tessbackdrop_sector2_camera1_ccd4.fits
src/tess_backdrop/data/sector002/camera01/ccd03/: tessbackdrop_jitter_sector2_camera1_ccd3.fits
src/tess_backdrop/data/sector002/camera01/ccd04/: tessbackdrop_jitter_sector2_camera1_ccd4.fits
src/tess_backdrop/data/sector011/camera01/ccd03/: tessbackdrop_jitter_sector11_camera1_ccd3.fits
tests/: test_tess_backdrop.py  test_tess_fullbackdrop.py  test_tess_simplebackdrop.py
tests/data/: tess2018206192942-s0001-1-4-0120-s_ffic.fits
(+3 files in other folders)
