[tool.poetry]
name = "tess-backdrop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.1"
mkdocstrings = "^0.15.0"
pytkdocs = {version = "^0.11.1", extras = ["numpy-style"]}
jupyterlab = "^3.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
