[tool.poetry]
name = "tess-backdrop"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
astropy = "^4.2.1"
matplotlib = "^3.4.1"
scipy = "^1.6.3"
lightkurve = "^2.0.9"
fitsio = "^1.1.4"
mkdocs-jupyter = "^0.17.3"
fbpca = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.1"
mkdocstrings = "^0.15.0"
pytkdocs = {version = "^0.11.1", extras = ["numpy-style"]}
jupyterlab = "^3.0.14"
fitsio = "^1.1.4"
line-profiler = "^3.2.6"
tess-cloud = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
